# wikipedia-rag

./: .gitignore  README.md  config.yaml  main.py  main_og.py  pyproject.toml
data/: __init__.py  get_datasets.py
data/preprocessing/: __init__.py  non_semantic_chunker.py  semantic_chunking.py  utils.py
embeddings/: __init__.py  embedding.py
schemas/: __init__.py  config_schema.py
utilities/: __init__.py  util.py
vector_db/: __init__.py  create_db.py  create_vector_database.py  vector_store.py
