[project]
name = "env-rag-vdb-kg-py313"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "datasets>=4.5.0",
    "einops>=0.8.1",
    "ipykernel>=7.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "sentence-transformers[openvino]>=5.2.0",
]
